recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:5: error: not found: value multiplicateur
  tree(steps-1, length*multiplicateur, angle, multiplicateur);
                       ^Tree:5: error: not found: value multiplicateur
  tree(steps-1, length*multiplicateur, angle, multiplicateur);
                                              ^Tree:10: error: not found: value legngth
  avance(legngth);
         ^Tree:11: error: not found: value multiplicateur
  tree(steps-1, length*multiplicateur, agnle, multiplicateur);
                       ^Tree:11: error: not found: value agnle
  tree(steps-1, length*multiplicateur, agnle, multiplicateur);
                                       ^Tree:11: error: not found: value multiplicateur
  tree(steps-1, length*multiplicateur, agnle, multiplicateur);
                                              ^